2009-07-10  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientBase.cs : some of Silverlight API are backported to full CLR.

2009-07-10  Atsushi Enomoto  <atsushi@ximian.com>

	* DuplexChannelFactory.cs : fill missing members.

2009-07-10  Atsushi Enomoto  <atsushi@ximian.com>

	* PeerNode.cs : significant refactoring. It does not call resolver
	  to manage the node itself but rather hold its state.

2009-07-09  Atsushi Enomoto  <atsushi@ximian.com>

	* PeerNode.cs : some implementation cleanup before significant
	  refactoring. Mesh state is not maintained here. Use optionally
	  fixed listener address and port. Set offline status when closed.

2009-07-08  Atsushi Enomoto  <atsushi@ximian.com>

	* NetPeerTcpBinding.cs : Fix interface implementations.

2009-07-02  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceBehaviorAttribute.cs : fill SingletonInstanceContext on
	  opening the host.

2009-06-25  Atsushi Enomoto  <atsushi@ximian.com>

	* InstanceContext.cs : add missing member / cosmetic API fix.
	* ServiceBehaviorAttribute.cs : InstanceContextMode is per-session
	  by default.

2009-06-23  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceHostBase.cs : remove more TODO.

2009-06-23  Atsushi Enomoto  <atsushi@ximian.com>

	* OperationContext.cs : implement SessionId.
	* ServiceHostBase.cs : implement open/close async methods.
	  remove some TODOs.

2009-06-23  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceRuntimeChannel.cs : remove some NIEs for actual use.
	  Dispose->Close.

2009-06-12  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelFactory.cs : no need for NIE at OnAbort() (at least so far).

2009-06-12  Atsushi Enomoto  <atsushi@ximian.com>

	 * ServiceHostBase.cs : do not give up releasing further channel
	   dispatchers when one of them threw an error. Use strict timeout.

2009-06-08  Atsushi Enomoto  <atsushi@ximian.com>

	* InstanceContext.cs :
	  Add call to base (see CommunicationObject change).

2009-05-26  Atsushi Enomoto  <atsushi@ximian.com>
