@@ -4,7 +4,7 @@
 // Author:
 //	Atsushi Enomoto <atsushi@ximian.com>
 //
-// Copyright (C) 2005 Novell, Inc.  http://www.novell.com
+// Copyright (C) 2005,2009 Novell, Inc.  http://www.novell.com
 //
 // Permission is hereby granted, free of charge, to any person obtaining
 // a copy of this software and associated documentation files (the
@@ -33,28 +33,57 @@ namespace System.ServiceModel
 {
 	public class DuplexClientBase<TChannel> : ClientBase<TChannel> where TChannel : class
 	{
-		protected DuplexClientBase (InstanceContext instance)
-			: this (instance, (Binding) null, null)
+		protected DuplexClientBase (object instance)
+			: this (new InstanceContext (instance), (Binding) null, null)
 		{
+		}
+
+		protected DuplexClientBase (object instance,
+			Binding binding, EndpointAddress address)
+			: this (new InstanceContext (instance), binding, address)
+		{
+		}
+
+		protected DuplexClientBase (object instance,
+			string configurationName)
+			: this (new InstanceContext (instance), configurationName)
+		{
+		}
+
+		protected DuplexClientBase (InstanceContext instance,
+			string bindingConfigurationName, EndpointAddress address)
+			: this (new InstanceContext (instance), bindingConfigurationName, address)
+		{
+		}
+
+		protected DuplexClientBase (InstanceContext instance)
+			: base ()
+		{
+			this.instance = instance;
 		}
 
 		protected DuplexClientBase (InstanceContext instance,
 			Binding binding, EndpointAddress address)
+			: base (binding, address)
 		{
-			throw new NotImplementedException ();
+			this.instance = instance;
 		}
 
 		protected DuplexClientBase (InstanceContext instance,
 			string configurationName)
+			: base (configurationName)
 		{
-			throw new NotImplementedException ();
+			this.instance = instance;
 		}
 
 		protected DuplexClientBase (InstanceContext instance,
 			string configurationName, EndpointAddress address)
+			: base (configurationName, address)
 		{
-			throw new NotImplementedException ();
+			this.instance = instance;
 		}
+
+		InstanceContext instance;
 
 		public IDuplexContextChannel InnerDuplexChannel {
 			get { throw new NotImplementedException (); }
